--- a/MicroShop.IdentiryServer/Views/_ViewImports.cshtml
+++ b/MicroShop.IdentiryServer/Views/_ViewImports.cshtml
@@ -1,3 +1,2 @@
-﻿@using MicroShop.IdentiryServer
-@using MicroShop.IdentiryServer.Models
+﻿@using IdentityServerHost.Quickstart.UI
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
