--- a/MicroShop.Web/Views/Home/Index.cshtml
+++ b/MicroShop.Web/Views/Home/Index.cshtml
@@ -1,8 +1,26 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model IEnumerable<MicroShop.Web.Models.ProductViewModel>
+<link rel="stylesheet" href="/css/product.css" asp-append-version="true" />
 
-<div class="text-center">
-    <h3>Shopping</h3>
-    <img src="~/images/MicroShop.png" alt="MicroShop" class="img-fluid" asp-append-version="true"/>
-</div>
+<form>
+    <div class="container row">
+        @foreach (var product in Model)
+        {
+            <div class="col-md-4 mb-2">
+                <a href="/Home/ProductDetails/@product.ProductId">
+                    <div class="card">
+                        <img class="card-img-top" src="@product.ImageUrl" />
+                        <div class="card-body">
+
+                            <h5 class="card-title mb-2">
+                                @product.Name
+                            </h5>
+                            <p class="card-text text-black">
+                                <b>@product.Price.ToString("c")</b>
+                            </p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        }
+    </div>
+</form>
